The database is fully functional

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,5 +2,5 @@
 
 {% block main %}
 <h1 class="page-header">About</h1>
-<p>This web app is about INFO3180 Project 1 </p>
+<p>This is a web application with a basic user interface that will check and display the weather forecast for the next 5 days and automate the sending of emails out to staff.</p>
 {% endblock %}
