--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,6 +2,6 @@
 
 {% block main %}
 {% include 'flash_messages.html' %}
-<h1 class="page-header">Project 1 </h1>
+<h1 class="page-header">Weather Forecaster</h1>
 <p class="lead">This is Project 1 for INFO3180.</p>
 {% endblock %}
