--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -36,8 +36,15 @@ body {
 
 .profileinfo{
     margin-right: 100px;
-    width: 250px;
+    width: 300px;
 }
+
+#workercontainer{
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
 
 .icon{
     height: 25px;
@@ -66,7 +73,7 @@ body {
 
 #soloprofile{
     display: grid;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto auto;
     background-color: white;
     border-radius: 10px;
     border-top: 3px solid blue ;
@@ -80,6 +87,7 @@ body {
     margin-right: 40px;
     margin-bottom: 30px;
 }
+
 
 #user{
     display:flex;
