--- a/app/templates/addworker.html
+++ b/app/templates/addworker.html
@@ -22,7 +22,7 @@
             {{ form.country.label }} {{ form.country(class="form-control") }}
         </div>
         <div class="form-group">
-            {{ form.telephone_no.label }} {{ form.telephone_no(class="form-control", id="textarea") }}
+            {{ form.telephone_no.label }} {{ form.telephone_no(class="form-control") }}
         </div>
          <div class="form-group">
             {{ form.role.label }} {{ form.role(class="form-control") }}
@@ -33,7 +33,7 @@
         <div class="form-group">
             {{ form.addresslocation.label }} {{ form.addresslocation(class="form-control") }}
         </div>
-        <button id="addprofilebtn" type="submit" class="btn btn-primary">Add Profile</button>
+        <button id="addprofilebtn" type="submit" class="btn btn-primary">Add Worker</button>
     </form>
     </div>
 {% endblock %}
