--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-  <a class="navbar-brand" href="#">Project 1</a>
+  <a class="navbar-brand" href="#">Krace Gennedy</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -13,10 +13,10 @@
         <a class="nav-link" href="{{ url_for('about') }}">About</a>
       </li>
        <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('addworker') }}">Profile</a>
+        <a class="nav-link" href="{{ url_for('addworker') }}">Add Worker</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('profiles') }}">Profiles</a>
+        <a class="nav-link" href="{{ url_for('workers') }}">View Workers</a>
       </li>
     </ul>
   </div>
